# typycal

./: Cargo.toml  LICENSE  README.md  words.txt
src/: game.rs  history.rs  input.rs  lib.rs  main.rs  statistics.rs  style.rs
