[package]
name = "typycal"
version = "0.1.0"
authors = ["Sebastian Rollen <rollenseb@gmail.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/SebRollen/typycal"
description = "A lightweight utility for typing and calculating stats about your typing speed."
keywords = ["cli", "typing", "game"]
categories = ["command-line-utilities", "games"]

[dependencies]
itertools = "0.10.3"
rand = "0.8.5"
structopt = { version = "0.3.26", default-features = false }
termion = "1.5.6"
